FIX: Long string causes horizontal scroll on mobile

--- a/app/assets/stylesheets/common/admin/users.scss
+++ b/app/assets/stylesheets/common/admin/users.scss
@@ -211,6 +211,12 @@
     }
   }
 
+  .long-value {
+    word-wrap: break-word;
+    max-width: 100%;
+    margin: 0;
+  }
+
   h1 {
     margin: 15px 0 5px 0;
   }
